--- a/index.html
+++ b/index.html
@@ -4,138 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Visualizador de CSV</title>
-  <!-- Importação correta da fonte Montserrat -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
-  <style>
-    /* Estilo global */
-    body {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #121212; /* Fundo escuro */
-      color: #ffffff; /* Texto claro */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
-    h1 {
-      color: #ffffff; /* Título em branco */
-      text-align: center;
-    }
-    /* Estilo da tabela */
-    table {
-      width: 95%;
-      max-width: 800px; /* Limita a largura máxima da tabela */
-      border-collapse: collapse;
-      margin-top: 20px;
-      background-color: #1e1e1e; /* Fundo escuro para a tabela */
-      color: #ffffff; /* Texto claro na tabela */
-    }
-    table, th, td {
-      border: 1px solid #333; /* Borda escura para melhor contraste */
-    }
-    th, td {
-      padding: 10px;
-      text-align: left;
-    }
-    th {
-      background-color: #2a2a2a; /* Cabeçalho com tom ligeiramente mais claro */
-      color: #ffffff; /* Texto claro no cabeçalho */
-    }
-    /* Estilo do input de arquivo */
-    input[type="file"] {
-      margin-bottom: 20px;
-      padding: 10px;
-      background-color: #2a2a2a;
-      color: #ffffff;
-      border: 1px solid #333;
-      border-radius: 5px;
-      cursor: pointer;
-      width: 90%; /* Largura ajustável */
-      max-width: 400px; /* Limita a largura máxima */
-    }
-    input[type="file"]:hover {
-      background-color: #3a3a3a; /* Efeito ao passar o mouse */
-    }
-    /* Mensagem de erro ou aviso */
-    #output {
-      color: #ff5252; /* Vermelho suave para mensagens de erro */
-      width: 95%;
-      max-width: 800px; /* Limita a largura máxima */
-      margin: 0 auto;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css"> <!-- External stylesheet -->
 </head>
 <body>
   <h1>Visualizador de Arquivo CSV</h1>
-  <input type="file" id="csvFileInput" accept=".csv" />
-  <div id="output"></div>
-  <script>
-    document.getElementById('csvFileInput').addEventListener('change', function(event) {
-      const file = event.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          const text = e.target.result;
-          const data = parseCSV(text);
-          renderTable(data);
-        };
-        reader.readAsText(file);
-      } else {
-        alert('Por favor, selecione um arquivo CSV.');
-      }
-    });
-    function parseCSV(csvText) {
-      const rows = csvText.split('\n');
-      const headers = rows[0].split(',').map(header => header.trim());
-      const data = [];
-      for (let i = 1; i < rows.length; i++) {
-        const row = rows[i].split(',').map(cell => cell.trim());
-        if (row.length === headers.length) {
-          const rowData = {};
-          headers.forEach((header, index) => {
-            rowData[header] = row[index];
-          });
-          data.push(rowData);
-        }
-      }
-      return data;
-    }
-    function renderTable(data) {
-      const outputDiv = document.getElementById('output');
-      outputDiv.innerHTML = '';
-      if (data.length === 0) {
-        outputDiv.textContent = 'Nenhum dado encontrado no arquivo CSV.';
-        return;
-      }
-      const table = document.createElement('table');
-      const thead = document.createElement('thead');
-      const tbody = document.createElement('tbody');
-      // Cria o cabeçalho da tabela
-      const headerRow = document.createElement('tr');
-      Object.keys(data[0]).forEach(key => {
-        const th = document.createElement('th');
-        th.textContent = key;
-        headerRow.appendChild(th);
-      });
-      thead.appendChild(headerRow);
-      // Preenche o corpo da tabela
-      data.forEach(rowData => {
-        const tr = document.createElement('tr');
-        Object.values(rowData).forEach(value => {
-          const td = document.createElement('td');
-          td.textContent = value;
-          tr.appendChild(td);
-        });
-        tbody.appendChild(tr);
-      });
-      table.appendChild(thead);
-      table.appendChild(tbody);
-      outputDiv.appendChild(table);
-    }
-  </script>
+  <input type="file" id="csvFileInput" accept=".csv" aria-label="Selecione um arquivo CSV para visualizar" />
+<p id="lineCount" style="font-size: small; color: #ffffff; margin: 10px 0;"></p> <!-- New element for line count -->
+<div id="output" role="alert" aria-live="polite"></div>
+  <script src="script.js"></script> <!-- External script -->
 </body>
 </html>
